Draw status bar battery icon bolt in code.
Use high-res polygon points, punching a hole in the rest of drawing
with PorterDuff.Mode.CLEAR.

Remove the now obsolete lightning.png and associated color filters.

Bug:10640891
Change-Id: I8f2d4dd157f9866f37ed9b3480bb79ee9f109975

--- a/packages/SystemUI/res/values/arrays.xml
+++ b/packages/SystemUI/res/values/arrays.xml
@@ -51,5 +51,14 @@
         <item>#FFFF3300</item>
         <item>#FFFFFFFF</item>
     </array>
-
+    <array name="batterymeter_bolt_points">
+        <item>88</item> <item>0</item>
+        <item>459</item><item>1</item>
+        <item>238</item><item>333</item>
+        <item>525</item><item>310</item>
+        <item>120</item><item>840</item>
+        <item>82</item> <item>818</item>
+        <item>246</item><item>373</item>
+        <item>0</item>  <item>408</item>
+    </array>
 </resources>
