Add public attr for fragmentBreadCrumbStyle, apply in constructor
BUG: 10680808
Change-Id: I7c22c1ff0b91892e62ea6bf6a311d33df6f13d78

--- a/core/res/res/values/attrs.xml
+++ b/core/res/res/values/attrs.xml
@@ -599,6 +599,8 @@
         <attr name="popupMenuStyle" format="reference" />
         <!-- Default StackView style. -->
         <attr name="stackViewStyle" format="reference" />
+        <!-- Default style for the FragmentBreadCrumbs widget. -->
+        <attr name="fragmentBreadCrumbsStyle" format="reference" />
 
         <!-- NumberPicker style. -->
         <attr name="numberPickerStyle" format="reference" />
