--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2077,5 +2077,6 @@
   <public type="attr" name="supportsSwitchingToNextInputMethod" />
   <public type="attr" name="requireDeviceUnlock" />
   <public type="attr" name="apduServiceBanner" />
+  <public type="attr" name="accessibilityLiveRegion" />
 
 </resources>
