Add comment header for API 20 in public.xml
Change-Id: I23036a77693b3a00d4a8c9f06d94871429992450

--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2078,6 +2078,12 @@
   <public type="attr" name="requireDeviceUnlock" />
   <public type="attr" name="apduServiceBanner" />
   <public type="attr" name="accessibilityLiveRegion" />
+
+<!-- ===============================================================
+     Resources added in version 20 of the platform
+     =============================================================== -->
+  <eat-comment />
+
   <public type="attr" name="fragmentBreadCrumbsStyle" />
 
   <public type="style" name="Widget.Holo.FragmentBreadCrumbs" />
