Change case of "keyset" to "keySet" for manifests
Bug: 10461185
Change-Id: Ibfe8cc6e716ac8b76ed7c05c26c332673479b7d8

--- a/core/res/res/values/attrs_manifest.xml
+++ b/core/res/res/values/attrs_manifest.xml
@@ -1821,7 +1821,9 @@
         <attr name="value" />
     </declare-styleable>
 
-    <attr name="keyset" />
+    <!-- Groups signing keys into a {@code KeySet} for easier reference in
+            other APIs. However, currently no APIs use this. -->
+    <attr name="keySet" />
     <declare-styleable name="PublicKey">
         <attr name="value" />
     </declare-styleable>
