--- a/packages/PrintSpooler/res/layout/print_job_config_activity_content_editing.xml
+++ b/packages/PrintSpooler/res/layout/print_job_config_activity_content_editing.xml
@@ -15,17 +15,16 @@
 -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:scrollbars="vertical"
     android:background="@color/editable_background">
 
-    <GridLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:columnCount="2">
+        android:orientation="vertical">
 
         <!-- Destination -->
 
@@ -37,190 +36,179 @@
             android:layout_marginTop="24dip"
             android:layout_marginStart="24dip"
             android:layout_marginEnd="24dip"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
             android:minHeight="?android:attr/listPreferredItemHeightSmall">
         </Spinner>
 
-        <!-- Copies -->
-
-        <view
-            class="com.android.printspooler.PrintJobConfigActivity$CustomEditText"
-            android:id="@+id/copies_edittext"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dip"
-            android:layout_marginEnd="6dip"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_gravity="bottom|fill_horizontal"
-            style="@style/PrintOptionEditTextStyle"
-            android:inputType="numberDecimal">
-        </view>
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dip"
-            android:layout_marginStart="36dip"
-            android:layout_marginEnd="6dip"
-            android:layout_row="1"
-            android:layout_column="0"
-            style="@style/PrintOptionTextViewStyle"
-            android:labelFor="@id/copies_edittext"
-            android:text="@string/label_copies">
-        </TextView>
+            <LinearLayout
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        <!-- Paper size -->
+                <!-- Copies -->
 
-        <Spinner
-            android:id="@+id/paper_size_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dip"
-            android:layout_marginEnd="24dip"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_gravity="fill_horizontal"
-            style="@style/PrintOptionSpinnerStyle">
-        </Spinner>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dip"
+                    android:layout_marginStart="36dip"
+                    android:layout_marginEnd="6dip"
+                    android:textAppearance="@style/PrintOptionTitleTextAppearance"
+                    android:labelFor="@+id/copies_edittext"
+                    android:text="@string/label_copies">
+                </TextView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dip"
-            android:layout_marginStart="18dip"
-            android:layout_marginEnd="24dip"
-            android:layout_row="1"
-            android:layout_column="1"
-            style="@style/PrintOptionTextViewStyle"
-            android:labelFor="@id/paper_size_spinner"
-            android:text="@string/label_paper_size">
-        </TextView>
+                <view
+                    class="com.android.printspooler.PrintJobConfigActivity$CustomEditText"
+                    android:id="@+id/copies_edittext"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dip"
+                    android:layout_marginEnd="6dip"
+                    style="@style/PrintOptionEditTextStyle"
+                    android:inputType="numberDecimal">
+                </view>
 
-        <!-- Color -->
+                <!-- Color -->
 
-        <Spinner
-            android:id="@+id/color_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dip"
-            android:layout_marginEnd="6dip"
-            android:layout_row="4"
-            android:layout_column="0"
-            android:layout_gravity="fill_horizontal"
-            style="@style/PrintOptionSpinnerStyle">
-        </Spinner>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dip"
+                    android:layout_marginStart="36dip"
+                    android:layout_marginEnd="6dip"
+                    android:textAppearance="@style/PrintOptionTitleTextAppearance"
+                    android:labelFor="@+id/color_spinner"
+                    android:text="@string/label_color">
+                </TextView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dip"
-            android:layout_marginStart="36dip"
-            android:layout_marginEnd="6dip"
-            android:layout_row="3"
-            android:layout_column="0"
-            style="@style/PrintOptionTextViewStyle"
-            android:labelFor="@id/color_spinner"
-            android:text="@string/label_color">
-        </TextView>
+                <Spinner
+                    android:id="@+id/color_spinner"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dip"
+                    android:layout_marginEnd="6dip"
+                    style="@style/PrintOptionSpinnerStyle">
+                </Spinner>
 
-        <!-- Orientation -->
+                <!-- Range options -->
 
-        <Spinner
-            android:id="@+id/orientation_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dip"
-            android:layout_marginEnd="24dip"
-            android:layout_row="4"
-            android:layout_column="1"
-            android:layout_gravity="fill_horizontal"
-            style="@style/PrintOptionSpinnerStyle">
-        </Spinner>
+                <TextView
+                    android:id="@+id/range_options_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dip"
+                    android:layout_marginStart="36dip"
+                    android:textAppearance="@style/PrintOptionTitleTextAppearance"
+                    android:labelFor="@+id/range_options_spinner"
+                    android:text="@string/label_pages">
+                </TextView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dip"
-            android:layout_marginStart="18dip"
-            android:layout_marginEnd="24dip"
-            android:layout_row="3"
-            android:layout_column="1"
-            style="@style/PrintOptionTextViewStyle"
-            android:labelFor="@id/orientation_spinner"
-            android:text="@string/label_orientation">
-        </TextView>
+                <Spinner
+                    android:id="@+id/range_options_spinner"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dip"
+                    android:layout_marginEnd="6dip"
+                    style="@style/PrintOptionSpinnerStyle">
+                </Spinner>
 
-        <!-- Range options -->
+            </LinearLayout>
 
-        <Spinner
-            android:id="@+id/range_options_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dip"
-            android:layout_marginEnd="6dip"
-            android:layout_row="6"
-            android:layout_column="0"
-            android:layout_gravity="fill_horizontal"
-            style="@style/PrintOptionSpinnerStyle">
-        </Spinner>
+            <LinearLayout
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/range_options_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dip"
-            android:layout_marginStart="36dip"
-            android:layout_row="5"
-            android:layout_column="0"
-            style="@style/PrintOptionTextViewStyle"
-            android:labelFor="@id/range_options_spinner"
-            android:text="@string/label_pages">
-        </TextView>
+                <!-- Paper size -->
 
-        <!-- Pages -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dip"
+                    android:layout_marginStart="18dip"
+                    android:layout_marginEnd="24dip"
+                    android:textAppearance="@style/PrintOptionTitleTextAppearance"
+                    android:labelFor="@+id/paper_size_spinner"
+                    android:text="@string/label_paper_size">
+                </TextView>
 
-        <view
-            class="com.android.printspooler.PrintJobConfigActivity$CustomEditText"
-            android:id="@+id/page_range_edittext"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dip"
-            android:layout_marginEnd="24dip"
-            android:layout_row="6"
-            android:layout_column="1"
-            android:layout_gravity="bottom|fill_horizontal"
-            style="@style/PrintOptionEditTextStyle"
-            android:visibility="gone"
-            android:inputType="textNoSuggestions">
-        </view>
+                <Spinner
+                    android:id="@+id/paper_size_spinner"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="6dip"
+                    android:layout_marginEnd="24dip"
+                    style="@style/PrintOptionSpinnerStyle">
+                </Spinner>
 
-       <TextView
-            android:id="@+id/page_range_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dip"
-            android:layout_marginStart="12dip"
-            android:layout_marginEnd="24dip"
-            android:layout_row="5"
-            android:layout_column="1"
-            style="@style/PrintOptionTextViewStyle"
-            android:labelFor="@id/page_range_edittext"
-            android:text="@string/pages_range_example"
-            android:textAllCaps="false">
-        </TextView>
+                <!-- Orientation -->
 
-       <!-- Print button -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dip"
+                    android:layout_marginStart="18dip"
+                    android:layout_marginEnd="24dip"
+                    android:textAppearance="@style/PrintOptionTitleTextAppearance"
+                    android:labelFor="@+id/orientation_spinner"
+                    android:text="@string/label_orientation">
+                </TextView>
+
+                <Spinner
+                    android:id="@+id/orientation_spinner"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="6dip"
+                    android:layout_marginEnd="24dip"
+                    style="@style/PrintOptionSpinnerStyle">
+                </Spinner>
+
+                <!-- Pages -->
+
+               <TextView
+                    android:id="@+id/page_range_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dip"
+                    android:layout_marginStart="12dip"
+                    android:layout_marginEnd="24dip"
+                    android:textAppearance="@style/PrintOptionTitleTextAppearance"
+                    android:text="@string/pages_range_example"
+                    android:labelFor="@+id/page_range_edittext"
+                    android:textAllCaps="false">
+                </TextView>
+
+                <view
+                    class="com.android.printspooler.PrintJobConfigActivity$CustomEditText"
+                    android:id="@+id/page_range_edittext"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="6dip"
+                    android:layout_marginEnd="24dip"
+                    android:layout_gravity="bottom|fill_horizontal"
+                    style="@style/PrintOptionEditTextStyle"
+                    android:visibility="gone"
+                    android:inputType="textNoSuggestions">
+                </view>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <!-- Print button -->
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="1dip"
             android:layout_marginTop="24dip"
-            android:layout_row="7"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
             android:layout_gravity="fill_horizontal"
             android:background="@color/separator"
             android:contentDescription="@null">
@@ -229,18 +217,14 @@
         <Button
             android:id="@+id/print_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
-            android:layout_row="8"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
             android:text="@string/print_button"
             android:textSize="16sp"
-            android:textColor="@color/important_text">
+            android:textColor="@color/item_text_color">
         </Button>
 
-    </GridLayout>
+    </LinearLayout>
 
 </ScrollView>
-
