--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -19,11 +19,10 @@
 <resources>
     <drawable name="notification_number_text_color">#ffffffff</drawable>
     <drawable name="ticker_background_color">#ff1d1d1d</drawable>
-    <drawable name="status_bar_background">#ff000000</drawable>
-    <color name="status_bar_background_semi_transparent">#66000000</color>
-    <color name="status_bar_background_transparent">#00000000</color>
-    <color name="navigation_bar_background_transparent_start">#7f000000</color>
-    <color name="navigation_bar_background_transparent_end">#00000000</color>
+    <drawable name="system_bar_background">#ff000000</drawable>
+    <color name="system_bar_background_semi_transparent">#66000000</color> <!-- 40% black -->
+    <color name="system_bar_background_gradient_start">#7f000000</color> <!-- 50% black -->
+    <color name="system_bar_background_gradient_end">#00000000</color>
     <color name="notification_panel_solid_background">#ff000000</color>
     <drawable name="status_bar_recents_app_thumbnail_background">#88000000</drawable>
     <color name="status_bar_recents_app_label_color">#ffffffff</color>
